[gd_scene load_steps=11 format=3 uid="uid://b6wdlro1dw41o"]

[ext_resource type="Script" path="res://ArmaGen.gd" id="1_82gnq"]
[ext_resource type="Texture2D" uid="uid://7exxfvrcnpao" path="res://Weapons/Icon29_13.png" id="2_43pwa"]
[ext_resource type="Script" path="res://melee.gd" id="2_j5euj"]
[ext_resource type="Texture2D" uid="uid://dds0ynv0bstoo" path="res://SP301_nyknck/SP301_nyknck/SP301_01.png" id="3_qg2ci"]
[ext_resource type="Texture2D" uid="uid://50mlri3vfh8c" path="res://SP301_nyknck/SP301_nyknck/SP301_02.png" id="4_83t6g"]
[ext_resource type="Texture2D" uid="uid://d32x5ydu2m2fq" path="res://SP301_nyknck/SP301_nyknck/SP301_03.png" id="5_uio46"]
[ext_resource type="Texture2D" uid="uid://jwhch5yj6g65" path="res://SP301_nyknck/SP301_nyknck/SP301_04.png" id="6_8cf16"]
[ext_resource type="Texture2D" uid="uid://eo2p05df8r3j" path="res://SP301_nyknck/SP301_nyknck/SP301_05.png" id="7_t5jqu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gs5kv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xel37"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qg2ci")
}, {
"duration": 1.4,
"texture": ExtResource("4_83t6g")
}, {
"duration": 1.4,
"texture": ExtResource("5_uio46")
}, {
"duration": 1.2,
"texture": ExtResource("6_8cf16")
}, {
"duration": 1.0,
"texture": ExtResource("7_t5jqu")
}],
"loop": false,
"name": &"attack_anim",
"speed": 10.0
}]

[node name="ArmaGen" type="Node2D"]
script = ExtResource("1_82gnq")

[node name="ArmaGen_sprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_43pwa")

[node name="weapon_cooldown_timer" type="Timer" parent="."]

[node name="bullet_spawn_marker" type="Marker2D" parent="."]
position = Vector2(15, -2.5)
scale = Vector2(0.5, 0.5)

[node name="Melee" type="Area2D" parent="."]
scale = Vector2(0.5, 0.5)
script = ExtResource("2_j5euj")

[node name="MeleeColl" type="CollisionShape2D" parent="Melee"]
position = Vector2(54, 0)
scale = Vector2(3.27941, 1.93548)
shape = SubResource("RectangleShape2D_gs5kv")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Melee"]
visible = false
position = Vector2(66, 0)
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_xel37")
animation = &"attack_anim"

[connection signal="area_entered" from="Melee" to="Melee" method="_on_area_entered"]
[connection signal="animation_finished" from="Melee/AnimatedSprite2D" to="Melee" method="_on_animated_sprite_2d_animation_finished"]
